Closed
Bug 1790436
Opened 2 years ago
Closed 2 years ago
Crash in [@ IPC::EnumSerializer<T>::Write] in IPDLParamTraits<RemoteImageHolder>::Write()
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
106 Branch
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox104 | --- | unaffected |
firefox105 | --- | unaffected |
firefox106 | --- | fixed |
People
(Reporter: mccr8, Assigned: bradwerth)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/33b005e7-a4de-4186-a974-ebc890220911
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(EnumValidator::IsLegalValue( static_cast<std::underlying_type_t<paramType>>(aValue)))
Top 10 frames of crashing thread:
0 XUL IPC::EnumSerializer<mozilla::gfx::ColorDepth, IPC::ContiguousEnumValidatorInclusive<mozilla::gfx::ColorDepth, ipc/glue/EnumSerializer.h:60
1 XUL mozilla::ipc::IPDLParamTraits<mozilla::RemoteImageHolder>::Write dom/media/ipc/RemoteImageHolder.cpp:148
2 XUL mozilla::ipc::IPDLParamTraits<mozilla::RemoteVideoData>::Write dom/media/ipc/RemoteMediaData.h:303
3 XUL IPC::ParamTraits<nsTArray<mozilla::RemoteVideoData> >::WriteValues ipc/glue/IPCMessageUtilsSpecializations.h:355
4 XUL IPC::ParamTraits<mozilla::DecodedOutputIPDL>::Write ipc/ipdl/PRemoteDecoder.cpp:357
5 XUL IPC::ParamTraits<mozilla::DecodeResultIPDL>::Write ipc/ipdl/PRemoteDecoder.cpp:1053
6 XUL mozilla::FunctionRef<void mfbt/FunctionRef.h:180
7 XUL mozilla::ipc::IPDLResolverInner::ResolveOrReject ipc/glue/ProtocolUtils.cpp:798
8 XUL std::__1::__function::__func<mozilla::PRemoteDecoderParent::OnMessageReceived /builds/worker/fetches/MacOSX11.3.sdk/usr/include/c++/v1/functional:1727
9 XUL mozilla::RemoteDecoderParent::DecodeNextSample dom/media/ipc/RemoteDecoderParent.cpp
It looks like this WriteIPDLParam call was added in bug 1787561.
Flags: needinfo?(bwerth)
Reporter | ||
Updated•2 years ago
|
Summary: Crash in [@ IPC::EnumSerializer<T>::Write] → Crash in [@ IPC::EnumSerializer<T>::Write] in IPDLParamTraits<RemoteImageHolder>::Write()
Comment 1•2 years ago
|
||
Set release status flags based on info from the regressing bug 1787561
status-firefox104:
--- → unaffected
status-firefox105:
--- → unaffected
status-firefox106:
--- → affected
status-firefox-esr102:
--- → unaffected
status-firefox-esr91:
--- → unaffected
Assignee | ||
Comment 2•2 years ago
|
||
The default constructor for RemoteImageHolder assigns default values to
all of its members. gfx::ColorDepth does not define a default value. This
change makes it so RemoteImageHolder provides a default value.
Assignee | ||
Updated•2 years ago
|
Assignee: nobody → bwerth
Flags: needinfo?(bwerth)
Pushed by bwerth@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/08047518429b
Provide a default value for RemoteImageHolder::mColorDepth. r=alwu
Comment 4•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•