Bug 1790436: Provide a default value for  RemoteImageHolder::mColorDepth. r=alwu

The default constructor for RemoteImageHolder assigns default values to
all of its members. gfx::ColorDepth does not define a default value. This
change makes it so RemoteImageHolder provides a default value.

Differential Revision: https://phabricator.services.mozilla.com/D157128